--- a/src/routes/About.css
+++ b/src/routes/About.css
@@ -6,7 +6,7 @@
     background-color:white;
     margin:0 auto;
     margin-top:100px;
-    max-width:25%;
+    max-height:25%;
     font-weight:300;
 
 }
